fixed more menu on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -984,12 +984,13 @@ section {
         width: 100%;
         height: 100%;
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-evenly;
     }
     .main-nav li, .main-nav.active li {
-        margin: 15px 0;
+        
         width: 100%;
         text-align: center;
+        padding-bottom: 20px;
     }
     .dropdown-content {
         position: static;
